FEAT Added example with MRJAR